Add Fixtures link to header

--- a/public/next.html
+++ b/public/next.html
@@ -26,12 +26,14 @@
       </button>
 
       <nav id="site-nav" class="site-nav" aria-label="Primary">
-        <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link is-active" href="next.html">Next Match</a>
-        <a class="nav-link" href="table.html">PL Table</a>
-        <a class="nav-link" href="classic.html">Classic Matches</a>
-        <a class="nav-link" href="live.html">Live Scores</a>
-      </nav>
+  <a class="nav-link" href="index.html">Home</a>
+  <a class="nav-link" href="next.html">Next Match</a>
+  <a class="nav-link" href="fixtures.html">Fixtures</a>
+  <a class="nav-link" href="table.html">PL Table</a>
+  <a class="nav-link" href="classic.html">Classic Matches</a>
+  <a class="nav-link" href="live.html">Live Scores</a>
+</nav>
+
 
       <div class="matchday-ticker" id="matchdayTicker" aria-live="polite">
         <span class="ticker-dot" aria-hidden="true"></span>
