--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Newcastle United fan site: next match, PL table, classics and live scores." />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <script defer src="assets/js/main.js"></script>
+  <script defer src="assets/js/easter-eggs.js"></script>
   <script defer src="assets/js/ticker.js"></script>
 </head>
 <body>
