Add matchday mode

--- a/public/next.html
+++ b/public/next.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
   <script defer src="assets/js/main.js"></script>
   <script defer src="assets/js/ticker.js"></script>
+  <script defer src="assets/js/matchday.js"></script>
   <script defer src="assets/js/easter-eggs.js"></script>
   <script defer src="assets/js/next.js"></script>
 </head>
