--- a/public/classic.html
+++ b/public/classic.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
   <script defer src="assets/js/main.js"></script>
   <script defer src="assets/js/easter-eggs.js"></script>
-  <script defer src="assets/js/easter-eggs.js"></script>
-
+  <script defer src="assets/js/ticker.js"></script>
   <style>
     .controls { display:flex; gap:12px; flex-wrap:wrap; align-items:center; margin: 18px 0 8px; }
     .select {
