--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <script defer src="assets/js/main.js"></script>
   <script defer src="assets/js/easter-eggs.js"></script>
   <script defer src="assets/js/ticker.js"></script>
+  <script defer src="assets/js/matchday.js"></script>
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
