Add NUFC History page with vintage design

--- a/public/classic.html
+++ b/public/classic.html
@@ -69,6 +69,8 @@
   <a class="nav-link" href="table.html">PL Table</a>
   <a class="nav-link" href="classic.html">Classic Matches</a>
   <a class="nav-link" href="live.html">Live Scores</a>
+  <a class="nav-link" href="history.html">History</a>
+
 </nav>
 
 
@@ -115,26 +117,6 @@
           <iframe
             src="https://www.youtube-nocookie.com/embed/7RhqDYJHykA"
             title="Newcastle 4-4 Arsenal"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
-        </div>
-      </article>
-
-      <article class="match-card" data-era="2010s">
-        <div class="match-meta">
-          <h2>Newcastle 5–1 Tottenham</h2>
-          <p class="muted">Premier League — 15 May 2016</p>
-          <div class="tags">
-            <span class="tag">Party Atmosphere</span>
-            <span class="tag">Last Day</span>
-            <span class="tag">Goals</span>
-          </div>
-        </div>
-        <div class="video">
-          <iframe
-            src="https://www.youtube-nocookie.com/embed/D0Sh6WGu07U"
-            title="Newcastle 5-1 Tottenham (2016) highlights"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
           </iframe>
