--- a/public/fixtures.html
+++ b/public/fixtures.html
@@ -34,6 +34,7 @@
         <a class="nav-link" href="table.html">PL Table</a>
         <a class="nav-link" href="classic.html">Classic Matches</a>
         <a class="nav-link" href="live.html">Live Scores</a>
+        <a class="nav-link" href="history.html">History</a>
       </nav>
 
       <div class="matchday-ticker" id="matchdayTicker" aria-live="polite">
