update broken video link

--- a/public/history.html
+++ b/public/history.html
@@ -92,7 +92,7 @@
           interviews in Premier League history.
         </p>
         <iframe
-          src="https://www.youtube-nocookie.com/embed/8n6hLqXw8d8"
+          src="https://www.youtube-nocookie.com/embed/mk87a7r0V60"
           title="Kevin Keegan I Will Love It interview"
           allowfullscreen>
         </iframe>
