Update footer text site-wide

--- a/public/classic.html
+++ b/public/classic.html
@@ -186,7 +186,7 @@
     </section>
 
     <footer class="site-footer">
-      <p class="muted">Want more? Check back soon.</p>
+      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
     </footer>
   </main>
 </body>
