--- a/public/history.html
+++ b/public/history.html
@@ -122,7 +122,7 @@
   </main>
 
   <footer class="site-footer">
-    <p class="muted small">NUFC Vault — preserving the past.</p>
-  </footer>
+      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
+    </footer>
 </body>
 </html>
