--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
     </section>
 
     <footer class="site-footer">
-      <p>© <span id="year"></span> NUFC Vault (fan site)</p>
+      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
     </footer>
   </main>
 </body>
