--- a/public/live.html
+++ b/public/live.html
@@ -66,7 +66,10 @@
 
   <!-- JS injects match tiles here -->
   <section id="matchesList" class="match-grid"></section>
-
+  
+  <footer class="site-footer">
+      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
+    </footer>
 </main>
 
 </body>
