--- a/public/table.html
+++ b/public/table.html
@@ -89,7 +89,7 @@
     </section>
 
     <footer class="site-footer">
-      <p class="muted small">Next: fixtures page + results page.</p>
+      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
     </footer>
   </main>
 </body>
