--- a/public/fixtures.html
+++ b/public/fixtures.html
@@ -74,6 +74,7 @@
     </section>
 
     <footer class="site-footer">
+      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
     </footer>
   </main>
 </body>
