--- a/public/history.html
+++ b/public/history.html
@@ -4,125 +4,228 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>NUFC Vault • Club History</title>
-  <meta name="description" content="The history of Newcastle United, St James’ Park, and iconic moments." />
+  <title>NUFC Vault • History</title>
+  <meta name="description" content="Newcastle United history, St James’ Park, iconic interviews, and club lore." />
 
-  <!-- Base site styles -->
+  <!-- Base site styling -->
   <link rel="stylesheet" href="assets/css/styles.css" />
-
-  <!-- History-only styling -->
+  <!-- Vintage history page styling -->
   <link rel="stylesheet" href="assets/css/history.css" />
 
   <script defer src="assets/js/main.js"></script>
+  <script defer src="assets/js/ticker.js"></script>
+  <script defer src="assets/js/matchday.js"></script>
+
+  <!-- History page open/close animation -->
+  <script defer src="assets/js/history-anim.js"></script>
 </head>
 
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
-  <!-- HEADER (same nav, but we’ll add History link later) -->
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">
+      <a class="brand" href="index.html" aria-label="Homepage">
         <span class="brand-badge">NUFC</span>
-        <span class="brand-text">Vault • History</span>
+        <span class="brand-text">Vault • Matchday Edition</span>
       </a>
 
-      <nav class="site-nav">
+      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">
+        <span class="sr-only">Toggle menu</span>
+        <span class="hamburger" aria-hidden="true"></span>
+      </button>
+
+      <nav id="site-nav" class="site-nav" aria-label="Primary">
         <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="next.html">Next Match</a>
         <a class="nav-link" href="fixtures.html">Fixtures</a>
         <a class="nav-link" href="table.html">PL Table</a>
         <a class="nav-link" href="classic.html">Classic Matches</a>
+        <a class="nav-link" href="live.html">Live Scores</a>
         <a class="nav-link is-active" href="history.html">History</a>
       </nav>
+
+      <div class="matchday-ticker" id="matchdayTicker" aria-live="polite">
+        <span class="ticker-dot" aria-hidden="true"></span>
+        <span class="ticker-text" id="tickerText">Loading next match…</span>
+        <span class="ticker-time" id="tickerTime">—</span>
+      </div>
     </div>
   </header>
 
-  <!-- MAIN -->
-  <main id="main" class="history-container">
+  <main id="main" class="history-container history-shell">
 
     <!-- HERO -->
     <section class="history-hero">
+      <p class="history-eyebrow">ARCHIVE FILE</p>
       <h1>Newcastle United</h1>
-      <p class="subtitle">A Club Forged in the North East</p>
+      <p class="subtitle">A factual look at the club, the stadium, and the moments that shaped the Toon.</p>
     </section>
 
     <!-- CLUB HISTORY -->
     <section class="history-section">
       <h2>Club History</h2>
+
       <p>
-        Newcastle United Football Club was formed in 1892 following the merger of
-        Newcastle East End and Newcastle West End. The club has since become one of
-        the most recognisable institutions in English football, representing not
-        just a city, but an entire region.
+        Newcastle United Football Club was formed in 1892 following the merger of Newcastle East End
+        and Newcastle West End. From the earliest decades of league football through to the modern era,
+        the club has been defined by identity, tradition, and a support base that extends far beyond the city.
       </p>
+
       <p>
-        Newcastle enjoyed early success in the 1900s, winning multiple league titles
-        and FA Cups, and later became known for attacking football during the Kevin
-        Keegan era of the 1990s. While major silverware has often proved elusive in
-        modern times, the club’s support has remained among the most passionate and
-        loyal in the world.
+        Over the decades, Newcastle have experienced periods of major success, near-misses, rebuilding,
+        and revival. The club’s story includes famous title challenges, iconic players, legendary managers,
+        and European nights that remain central to the folklore of St James’ Park.
       </p>
+
+      <!-- Timeline blocks -->
+      <div class="timeline" aria-label="NUFC timeline highlights">
+        <div class="timeline-item">
+          <div class="timeline-year">1892</div>
+          <div class="timeline-text">Newcastle United formed following the merger of Newcastle East End and Newcastle West End.</div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-year">1900s</div>
+          <div class="timeline-text">Early periods of top-level success established Newcastle among the leading clubs of the era.</div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-year">1990s</div>
+          <div class="timeline-text">A high-profile era defined by attacking football, intense title races, and national attention.</div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-year">Modern era</div>
+          <div class="timeline-text">A renewed focus on long-term growth and competitiveness at the highest level.</div>
+        </div>
+      </div>
     </section>
 
-    <!-- ST JAMES PARK -->
+    <!-- ST JAMES' PARK -->
     <section class="history-section">
       <h2>St James’ Park</h2>
+
       <p>
-        St James’ Park has been the home of Newcastle United since 1892. Situated in
-        the heart of the city, it is one of the most iconic stadiums in English
-        football, with a current capacity of over 52,000.
+        St James’ Park has been Newcastle United’s home since 1892. Built into the city, rather than placed
+        on its outskirts, it has a unique presence — towering over nearby streets and forming part of the
+        skyline on matchdays.
       </p>
+
       <p>
-        Known for its towering stands and intense atmosphere, the stadium has hosted
-        European nights, FA Cup ties, and unforgettable Premier League encounters.
-        On matchdays, it dominates the city skyline — a constant reminder of football’s
-        place in Newcastle life.
+        The stadium is known for its scale, steep stands, and the intensity of the atmosphere — particularly
+        in the Gallowgate End. It has hosted domestic cup ties, European football, and some of the most
+        memorable Premier League matches of the modern era.
       </p>
+
+      <div class="timeline" aria-label="St James’ Park notes">
+        <div class="timeline-item">
+          <div class="timeline-year">Location</div>
+          <div class="timeline-text">Central Newcastle — a city stadium in the truest sense.</div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-year">Atmosphere</div>
+          <div class="timeline-text">Steep stands + close-to-the-pitch noise = one of the most distinctive grounds in England.</div>
+        </div>
+      </div>
     </section>
 
-    <!-- ICONIC MOMENTS -->
+    <!-- BADGE EVOLUTION -->
     <section class="history-section">
-      <h2>Iconic Moments</h2>
+      <h2>Badge Evolution</h2>
+
+      <p>
+        Newcastle United’s crest has evolved across eras. Badge design in football often reflects wider design
+        trends, practical kit production needs, and how clubs want to present their identity across generations.
+      </p>
+
+      <div class="badge-timeline">
+        <article class="badge-era">
+          <div class="era-meta">
+            <h3>Early identity & heraldry</h3>
+            <p class="muted small">Early–mid 20th century</p>
+          </div>
+          <p class="muted">
+            Early crests and emblems often leaned on civic symbolism and traditional heraldic styling.
+            Add images here once you’ve collected them.
+          </p>
+          <div class="badge-slot">
+            <span class="slot-title">Add image</span>
+            <span class="slot-sub">Place crest image in: assets/images/badges/</span>
+          </div>
+        </article>
+
+        <article class="badge-era">
+          <div class="era-meta">
+            <h3>Modern club crest</h3>
+            <p class="muted small">Late 20th century–present</p>
+          </div>
+          <p class="muted">
+            The modern crest is the best-known symbol of the club today — built for recognisability on kits,
+            media, and merchandise.
+          </p>
+          <div class="badge-slot">
+            <span class="slot-title">Add image</span>
+            <span class="slot-sub">Place crest image in: assets/images/badges/</span>
+          </div>
+        </article>
+
+        <article class="badge-era">
+          <div class="era-meta">
+            <h3>Special editions & variants</h3>
+            <p class="muted small">Anniversary marks & simplified versions</p>
+          </div>
+          <p class="muted">
+            Clubs often use simplified marks or anniversary versions. Document those here with dates and context.
+          </p>
+          <div class="badge-slot">
+            <span class="slot-title">Add image</span>
+            <span class="slot-sub">Place crest image in: assets/images/badges/</span>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- ICONIC INTERVIEWS / VIDEOS -->
+    <section class="history-section">
+      <h2>Iconic Interviews & Footage</h2>
 
       <div class="history-video">
-        <h3>“I Will Love It!” — Kevin Keegan</h3>
+        <h3>“I will love it!” — Kevin Keegan</h3>
         <p class="caption">
-          Kevin Keegan’s passionate 1996 outburst remains one of the most famous
-          interviews in Premier League history.
+          A famous 1996 Premier League-era interview that captured the pressure, emotion, and intensity of the title race.
         </p>
         <iframe
           src="https://www.youtube-nocookie.com/embed/mk87a7r0V60"
-          title="Kevin Keegan I Will Love It interview"
-          allowfullscreen>
-        </iframe>
+          title="Kevin Keegan - I will love it interview"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
 
       <div class="history-video">
-        <h3>Newcastle United — A Club Like No Other</h3>
+        <h3>Featured: Newcastle United Video</h3>
         <p class="caption">
-          A reflective look at the club’s identity, culture, and emotional connection
-          with its supporters.
+          A dedicated feature section for the video you linked — placed here with context as part of the club archive.
         </p>
         <iframe
           src="https://www.youtube-nocookie.com/embed/NhqRXAWxaeU"
-          title="Newcastle United history video"
-          allowfullscreen>
-        </iframe>
+          title="Featured Newcastle United video"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
+
+      <p class="muted small">
+        Tip: You can add more interviews here by swapping the embed link (use youtube-nocookie.com for privacy).
+      </p>
     </section>
 
     <!-- QUOTE -->
     <section class="history-quote">
       <blockquote>
-        “You don’t support Newcastle United. You live it.”
+        “A city club. A northern club. A club with a story that never stops.”
       </blockquote>
     </section>
 
-  </main>
-
-  <footer class="site-footer">
-      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
+    <footer class="site-footer">
+      <p class="muted small">NUFC Vault — the archive grows over time.</p>
     </footer>
+  </main>
 </body>
 </html>
