update history page

--- a/public/history.html
+++ b/public/history.html
@@ -127,17 +127,7 @@
       </div>
     </section>
 
-    <!-- BADGE EVOLUTION -->
-    <section class="history-section">
-      <h2>Badge Evolution</h2>
-
-      <p>
-        Newcastle United’s crest has evolved across eras. Badge design in football often reflects wider design
-        trends, practical kit production needs, and how clubs want to present their identity across generations.
-      </p>
-
-      <div class="badge-timeline">
-        <article class="badge-era">
+         <article class="badge-era">
           <div class="era-meta">
             <h3>Early identity & heraldry</h3>
             <p class="muted small">Early–mid 20th century</p>
@@ -211,9 +201,6 @@
           allowfullscreen></iframe>
       </div>
 
-      <p class="muted small">
-        Tip: You can add more interviews here by swapping the embed link (use youtube-nocookie.com for privacy).
-      </p>
     </section>
 
     <!-- QUOTE -->
@@ -224,7 +211,7 @@
     </section>
 
     <footer class="site-footer">
-      <p class="muted small">NUFC Vault — the archive grows over time.</p>
+      <p>© <span id="year"></span> NUFC Vault (a KingKirb & Son site)</p>
     </footer>
   </main>
 </body>
