--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,19 @@
   <a class="nav-link" href="next.html">Next Match</a>
   <a class="nav-link" href="fixtures.html">Fixtures</a>
   <a class="nav-link" href="table.html">PL Table</a>
-  <a class="nav-link" href="classic.html">Classic Matches</a>
-  <a class="nav-link" href="live.html">Live Scores</a>
-  <a class="nav-link" href="history.html">History</a>
 
+  <div class="nav-dropdown">
+    <button class="nav-link nav-dropbtn" type="button" aria-expanded="false">
+      More ▾
+    </button>
+    <div class="nav-menu" role="menu" aria-label="More pages">
+      <a href="classic.html">Classic Matches</a>
+      <a href="live.html">Live Scores</a>
+      <a href="history.html">History</a>
+    </div>
+  </div>
 </nav>
+
 
 
       <div class="matchday-ticker" id="matchdayTicker" aria-live="polite">
