--- a/public/classic.html
+++ b/public/classic.html
@@ -51,44 +51,45 @@
   <a class="skip-link" href="#main">Skip to content</a>
 
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="index.html" aria-label="Homepage">
-        <span class="brand-badge">NUFC</span>
-        <span class="brand-text">Vault • Matchday Edition</span>
-      </a>
+  <div class="container header-inner">
 
-      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">
-        <span class="sr-only">Toggle menu</span>
-        <span class="hamburger" aria-hidden="true"></span>
-      </button>
+    <a class="brand" href="index.html" aria-label="Homepage">
+      <span class="brand-badge">NUFC</span>
+      <span class="brand-text">Vault • Matchday Edition</span>
+    </a>
 
-<nav id="site-nav" class="site-nav" aria-label="Primary">
-  <a class="nav-link" href="index.html">Home</a>
-  <a class="nav-link" href="next.html">Next Match</a>
-  <a class="nav-link" href="fixtures.html">Fixtures</a>
-  <a class="nav-link" href="table.html">PL Table</a>
-
-  <div class="nav-dropdown">
-    <button class="nav-link nav-dropbtn" type="button" aria-expanded="false">
-      More ▾
+    <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">
+      <span class="sr-only">Toggle menu</span>
+      <span class="hamburger" aria-hidden="true"></span>
     </button>
-    <div class="nav-menu" role="menu" aria-label="More pages">
-      <a href="classic.html">Classic Matches</a>
-      <a href="live.html">Live Scores</a>
-      <a href="history.html">History</a>
-    </div>
-  </div>
-</nav>
 
+    <nav id="site-nav" class="site-nav" aria-label="Primary">
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="next.html">Next Match</a>
+      <a class="nav-link" href="fixtures.html">Fixtures</a>
+      <a class="nav-link" href="table.html">PL Table</a>
 
-
-      <div class="matchday-ticker" id="matchdayTicker" aria-live="polite">
-        <span class="ticker-dot" aria-hidden="true"></span>
-        <span class="ticker-text" id="tickerText">Loading next match…</span>
-        <span class="ticker-time" id="tickerTime">—</span>
+      <div class="nav-dropdown">
+        <button class="nav-link nav-dropbtn" type="button" aria-expanded="false">
+          More ▾
+        </button>
+        <div class="nav-menu" role="menu">
+          <a href="classic.html">Classic Matches</a>
+          <a href="live.html">Live Scores</a>
+          <a href="history.html">History</a>
+        </div>
       </div>
+    </nav>
+
+    <div class="matchday-ticker" id="matchdayTicker" aria-live="polite">
+      <span class="ticker-dot" aria-hidden="true"></span>
+      <span class="ticker-text" id="tickerText">Loading next match…</span>
+      <span class="ticker-time" id="tickerTime">—</span>
     </div>
-  </header>
+
+  </div>
+</header>
+
 
   <main id="main" class="container page">
     <header class="page-head">
