--- a/public/classic.html
+++ b/public/classic.html
@@ -106,6 +106,7 @@
         <label class="sr-only" for="filter">Filter era</label>
         <select id="filter" class="select">
           <option value="all">All eras</option>
+		  <option value="2020s">2020s</option>
           <option value="2010s">2010s</option>
           <option value="2000s">2000s</option>
           <option value="1990s">1990s</option>
@@ -117,6 +118,25 @@
     </header>
 
     <section class="match-list">
+      <article class="match-card" data-era="2020s""cup">
+        <div class="match-meta">
+          <h2>Newcastle 2–1 Liverpool</h2>
+          <p class="muted">EFL Cup final — 16 March 2025</p>
+          <div class="tags">
+            <span class="tag">The Cup Win</span>
+            <span class="tag">Wembley Stadium</span>
+            <span class="tag">Classic</span>
+          </div>
+        </div>
+        <div class="video">
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/ZZ0azTD8Rvw"
+            title="Newcastle 2-1 Liverpool Carabao Cup"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+          </iframe>
+        </div>
+      </article>
 
       <article class="match-card" data-era="2010s">
         <div class="match-meta">
