Add RAW FPL page

--- a/public/history.html
+++ b/public/history.html
@@ -56,6 +56,7 @@
           <a href="classic.html">Classic Matches</a>
           <a href="live.html">Live Scores</a>
           <a href="history.html">History</a>
+		  <a href="rawfpl.html">RAW FPL</a>
         </div>
       </div>
     </nav>
