fix raw fpl page

--- a/public/rawfpl.html
+++ b/public/rawfpl.html
@@ -55,7 +55,7 @@
           <p class="raw-kicker">Fantasy Premier League • Matchweek Updates</p>
 
           <div class="raw-logo">
-            <img src="assets/img/rawfpl-logo.png" alt="RAWFPL logo" />
+            <img src="public/assets/img/rawfpl-logo.png" alt="RAWFPL logo" />
             <div>
               <h1 class="raw-title">RAWFPL Video Hub</h1>
               <p class="raw-sub">
@@ -71,8 +71,6 @@
           </div>
 
           <div class="info-strip">
-            <div class="pill">🟣 #26004B</div>
-            <div class="pill">🟢 #43D361</div>
             <div class="pill">⚽ FPL Every Week</div>
           </div>
         </div>
