Update nav links

--- a/public/classic.html
+++ b/public/classic.html
@@ -79,18 +79,11 @@
       <a class="nav-link" href="next.html">Next Match</a>
       <a class="nav-link" href="fixtures.html">Fixtures</a>
       <a class="nav-link" href="table.html">PL Table</a>
+	  <a class="nav-link is active" href="classic.html">Classic Matches</a>
+	  <a class="nav-link" href="live.html">Live Scores</a>
+	  <a class="nav-link" href="history.html">Club History</a>
+	  <a class="nav-link" href="rawfpl.html">RAW FPL</a>
 
-      <div class="nav-dropdown">
-        <button class="nav-link nav-dropbtn" type="button" aria-expanded="false">
-          More ▾
-        </button>
-        <div class="nav-menu" role="menu">
-          <a href="classic.html">Classic Matches</a>
-          <a href="live.html">Live Scores</a>
-          <a href="history.html">History</a>
-		  <a href="rawfpl.html">RAW FPL</a>
-        </div>
-      </div>
     </nav>
 
     <div class="matchday-ticker" id="matchdayTicker" aria-live="polite">
