--- a/public/rawfpl.html
+++ b/public/rawfpl.html
@@ -55,7 +55,7 @@
           <p class="raw-kicker">Fantasy Premier League • Matchweek Updates</p>
 
           <div class="raw-logo">
-            <img src="public/assets/img/rawfpl-logo.png" alt="RAWFPL logo" />
+            <img src="assets/img/rawfpl-logo.png" alt="RAWFPL logo" />
             <div>
               <h1 class="raw-title">RAWFPL Video Hub</h1>
               <p class="raw-sub">
@@ -80,9 +80,6 @@
           <p class="muted">
             A dedicated Fantasy Premier League channel. New uploads appear automatically below.
           </p>
-          <p class="muted small" style="margin-top:10px;">
-            Tip: If YouTube embeds ever fail on mobile, refresh once.
-          </p>
         </aside>
       </div>
     </section>
@@ -93,7 +90,7 @@
 
       <div class="video" style="margin-top:12px;">
         <iframe
-          src="https://www.youtube-nocookie.com/embed/videoseries?listType=user_uploads&user=RAWFPL"
+          src="https://www.youtube-nocookie.com/embed/6llZ7ItKwyI"
           title="RAWFPL uploads"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
